# SpaarApp

./: .env.example  .gitignore  Cargo.toml  DATABASE_FIX.md  DATABASE_FIX_SUMMARY.md  MANUAL_TEST_SCRIPT.md  README.md  TEST_REPORT.md  package-lock.json  package.json  test-backend.js  tsconfig.json  vite.config.ts
.claude/: config.json
.claude/agents/: spaarapp-financial-developer.md
.claude/commands/: spaarapp-dev.md
.github/workflows/: ci-cd.yml
docs/architecture/: overview.md  spaarapp-specification.md
docs/guides/: coding-standards.md
docs/setup/: development.md
sample-data/: README.md  import-sample-data.js  seed-data.json  transactions-sample.csv
spaarapp/backend/: Cargo.toml
spaarapp/backend/src/: lib.rs
spaarapp/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
spaarapp/frontend/src/: App.tsx  main-simple.tsx  main.css  main.tsx.broken  vite-env.d.ts
spaarapp/frontend/src-tauri/: Cargo.toml  build.rs  spaarapp.db-shm  spaarapp.db-wal  tauri.conf.json
spaarapp/frontend/src-tauri/.sqlx/: query-0000000000000000000000000000000000000000000000000000000000000000000.json
spaarapp/frontend/src-tauri/src/: ai_insights.rs  csv_import.rs  database.rs  encryption.rs  error.rs  lib.rs  main.rs  models.rs
spaarapp/frontend/src-tauri/src/commands/: ai_insights.rs  app.rs  budgets.rs  categories.rs  csv_import.rs  files.rs  mod.rs  settings.rs  transactions.rs
spaarapp/frontend/src/components/: Budgets.tsx  Categories.tsx  CsvImport.tsx  Dashboard.tsx  ErrorBoundary.tsx  ImportProgress.tsx  Insights.tsx  Layout.tsx  LoadingScreen.tsx  Notifications.tsx  Settings.tsx  Transactions.tsx  TransactionsMui.tsx
spaarapp/frontend/src/services/: api.ts  apiWithFallback.ts  mockData.ts
spaarapp/frontend/src/types/: global.d.ts  index.ts
spaarapp/frontend/src/utils/: tauri.ts
spaarapp/shared/: Cargo.toml
spaarapp/shared/src/: lib.rs  models.rs  utils.rs
src/config/: security.rs
templates/: component-template.tsx  tauri-command-template.rs
tests/: ai-assisted-testing.ts
