[workspace]
members = [
    "spaarapp/backend",
    "spaarapp/shared",
]
resolver = "2"

[workspace.dependencies]
# Tauri core
tauri = { version = "2.0", features = ["shell-open"] }
tauri-build = { version = "2.0", features = [] }

# Claude Agent SDK
claude-agent-sdk = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and encryption
rusqlite = { version = "0.31", features = ["bundled", "sqlcipher"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Security and cryptography
ring = "0.17"
argon2 = "0.5"
rand = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Financial data processing
rust_decimal = { version = "1.35", features = ["serde-float"] }
csv = "1.3"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
debug = true
opt-level = 0