[workspace]
members = [
    "spaarapp/backend",
    "spaarapp/shared",
    "spaarapp/frontend/src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }

# Tauri plugins
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-window-state = "2.4"
tauri-plugin-notification = "2.2"
tauri-plugin-clipboard-manager = "2.2"

# Claude Agent SDK
claude-agent-sdk = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and encryption - using sqlx for async support with SQLCipher
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros", "rust_decimal"] }

# Security and cryptography
ring = "0.17"
argon2 = "0.5"
rand = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Financial data processing
rust_decimal = { version = "1.35", features = ["serde-float"] }
csv = "1.3"

# Math utilities
ordered-float = "3.7"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Base64 encoding/decoding
base64 = "0.21"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
debug = true
opt-level = 0